NtInfo should be a sealed type